--- a/app/globals.css
+++ b/app/globals.css
@@ -43,23 +43,21 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar {
-  width: 16px;
+  width: 9px;
   height: 12px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background: #1a1a1a;
   border-radius: 12px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #555;
-  border-radius: 5px;
-  border: 3px solid #1a1a1a;
+  background-color: #403c58d5;
+  border-radius: 3px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #777;
+  background-color:  #403c58d5;
 }
 
 .hidden-scrollbar {
